--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "amazon-cognito-examples",
   "version": "0.1.0",
   "description": "Example of Amazon Congito service",
+  "repository": "https://github.com/st4lk/aws_cognito_example",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,21 +19,22 @@
   "author": "Alexey Evseev",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.18.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.6.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "3.2.0",
     "node-sass": "^4.13.0",
+    "sass": "^1.23.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "4.41.2",
